# PETAce-Network

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: EnableCXX17.cmake  EnableDebugFlags.cmake  NetworkCustomMacros.cmake  PETAce-NetworkConfig.cmake.in
example/: CMakeLists.txt  agent_example.cpp  example.cpp  example.h  socket_example.cpp
src/network/: CMakeLists.txt  grpc_client.cpp  grpc_client.h  net_agent.cpp  net_agent.h  net_factory.h  net_socket.cpp  net_socket.h  network.h
src/network/proto/: CMakeLists.txt  simple.grpc.pb.cc  simple.grpc.pb.h  simple.pb.cc  simple.pb.h  simple.proto
src/network/util/: config.h.in
test/: CMakeLists.txt  network_test.cpp
tools/: clang-format-all.sh
